--- a/web/admin.html
+++ b/web/admin.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li ng-class="state1"><a id="link-1" href ng-click="showServices = false; state1 = 'active'; state2='default'">servers</a></li>
+                        <li ng-class="state1"><a id="link-1" href ng-click="showServices = false; state1 = 'active'; state2='default';selectedInstances=instances">servers</a></li>
                         <li ng-class="state2"><a id="link-2" href ng-click="showServices = true; state1 = 'default'; state2='active'">services</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -60,11 +60,11 @@
                                         <br>
                                         <br>
                                <table class="table table-striped">
-                                  <th>NAME</th>
+                               <th>NAME</th>
                                <th>PID</th>
                                <th>STATE</th>
                                <th>INVOKED</th>
-                               <tr ng-repeat="instance in instances | filter:searchText"/>
+                               <tr ng-repeat="instance in selectedInstances | filter:searchText"/>
                                   <td>{{instance.alias}}</td>
                                   <td>{{instance.pid}}</td>
                                   <td>{{getState(instance.state)}}</td>
