--- a/webapp/elements/casual-server/casual-server.html
+++ b/webapp/elements/casual-server/casual-server.html
@@ -4,93 +4,110 @@
   <template>
     <style>
 
-    	.server-content{
-    		height: 80px;
+    	#content{
+    		min-height: 60px;
     		width: 100%;
-    		border: 1px solid #ECEFF1;
-    		border-radius: 10px;
     		overflow: hidden;
-
-    		/* Shadow */
-			-webkit-box-shadow: -1px 2px 15px 0px rgba(217,217,217,1);
-			-moz-box-shadow: -1px 2px 15px 0px rgba(217,217,217,1);
-			box-shadow: -1px 2px 15px 0px rgba(217,217,217,1);
-
-    		/* Display divs in a row */
-			display: flex;
-			flex-direction: row;
-			flex-wrap: nowrap;
-			justify-content: space-between; 
-
-
-			margin-bottom: 10px;
+            vertical-align: middle;
+			flex-direction: column;
+            border-bottom: 1px solid #ECEFF1;
     	}
 
-    	.server-content ul{
+        #content:hover{
+            background-color: #ECEFF1;
+        }
+
+    	#content ul{
     		list-style: none;
     		margin: 0;
     		padding: 0;
     	}
 
-    	.left-content{
-    		height: 100%;
-    		min-width: 40px;
-    		display: table;
-    		border-right: 1px solid #ECEFF1;
-    	}
+        #server-content{
+            padding: 5px;
+            width: 100%;
+            height: 100%;
+        }
 
-    	.middle-content{
-    		height: 100%;
-    		width: 100%;
-    		margin: 5px 0 0 5px;
-    	}
+        #server-info{
+            width: 100%;
+            height: 100%;
+        }
 
-    	.right-content{
-    		height: 100%;
-    		width: 130px;
-    		margin: 5px 0 0 5px;
-    	}
+        #server-instances{
+            width: 100%;
+        }
 
-    	.server-id{
-    		display: table-cell;
-    		text-align: center;
-  			vertical-align: middle;
-    		font-size: 1.2em;
-    		color: white;
-    		background-color: #43A047;
-    	}
+        #server-memberships{
+            width: 100%;
+        }
 
-    	.server-alias{
-    		font-size: 1.1em;
-    		font-weight: bold;
-    	}
+        #server-alias{
+            font-size: 1.2em;
+            font-weight: bold;
+        }
 
-    	.server-path{
-    		font-size: 0.8em;
-    	}
+        #server-path{
+            font-style: italic;
+        }
+
+    	#server-instances-text:hover, #server-memberships-text:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        #server-instances-field, #server-memberships-field{
+            color: grey;
+            font-size: 0.8em;
+            vertical-align: middle;
+        }
 
     </style>
 
-    <template is="dom-repeat" items={{serverdata}}>
-    	<div class="server-content">
-    		<div class="left-content">
-	    		<span class="server-id">{{item.id}}</span>
-    		</div>
-    		<div class="middle-content">
-    			<ul>
-    				<li><span class="server-alias">{{item.alias}}</span></li>
-    				<li><span class="server-path">{{item.path}}</span></li>
-    			</ul>
-    		</div>
-    		<div class="right-content">
-    			<ul>
-    				<li><span>{{item.instances.length}} instances</span></li>
-    				<li><span>{{item.deaths}} deaths</span></li>
-    			</ul>
-    		</div> 
-    	</div>
-
-    </template>
+    <div id="content">
+        <div id="server-content">
+            <div id="server-info">
+                <ul>
+                    <li>
+                        <span id="server-alias">{{serverdata.alias}}</span>
+                        <span id="server-path"> - {{serverdata.path}}</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span id="server-instances-text" on-tap="toggleInstances">Instances:</span>
+                        <span id="server-instances-counter"> {{serverdata.instances.length}}</span>
+                        <template is="dom-if" if="{{serverdata.instances.length}}">
+                            <span id="server-instances-field">
+                                <template is="dom-if" if="{{showinstances}}">[ - ]</template>
+                                <template is="dom-if" if="{{!showinstances}}">[ + ]</template>
+                            </span>
+                        </template>
+                    </li>
+                    <template is="dom-if" if="{{showinstances}}">
+                        <template is="dom-if" if="{{serverdata.instances.length}}">
+                            <li>{{serverdata.instances}}</li>
+                        </template>
+                    </template>
+                    <li>
+                        <span id="server-memberships-text" on-tap="toggleMemberships">Memberships:</span>
+                        <span id="server-memberships-counter"> {{serverdata.memberships.length}}</span>
+                        <template is="dom-if" if="{{serverdata.memberships.length}}">
+                            <span id="server-memberships-field">
+                                <template is="dom-if" if="{{showmemberships}}">[ - ]</template>
+                                <template is="dom-if" if="{{!showmemberships}}">[ + ]</template>
+                            </span>
+                        </template>
+                    </li>
+                    <template is="dom-if" if="{{showmemberships}}">
+                        <template is="dom-if" if="{{serverdata.memberships.length}}">
+                            <li>{{serverdata.memberships}}</li>
+                        </template>
+                    </template>
+                </ul>
+            </div>
+        </div>
+    </div>
   </template>
 
   <script>
@@ -101,11 +118,35 @@
         is: 'casual-server',
 
         properties: {
-          serverdata: {
-            type: Object,
-            notify: true
-          }
+            serverdata: {
+                type: Object,
+                notify: true,
+                value: function(d){
+                    return d.serverdata;
+                }
+            },
+
+            showmemberships: {
+                type: Boolean,
+                notify: true,
+                value: false
+            },
+
+            showinstances: {
+                type: Boolean,
+                notify: true,
+                value: false
+            }
+        },
+
+        toggleInstances: function(){
+            this.showinstances = this.showinstances ? false : true;
+        },
+
+        toggleMemberships: function(){
+            this.showmemberships = this.showmemberships ? false : true;
         }
+
       });
     })();
   </script>
