--- a/webapp/elements/elements.html
+++ b/webapp/elements/elements.html
@@ -8,11 +8,6 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!-- Iron elements -->
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
@@ -23,9 +18,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 
-<!-- Elements from customelements.io -->
-<link rel="import" href="../bower_components/paper-datatable/paper-datatable.html">
-<link rel="import" href="../bower_components/paper-datatable/paper-datatable-column.html">
+<!-- Iron elements -->
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
@@ -34,6 +31,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 
+<link rel="import" href="./casual-list/casual-list.html">
 <link rel="import" href="./casual-server/casual-server.html">
+<link rel="import" href="./casual-instance/casual-instance.html">
+<link rel="import" href="./casual-group/casual-group.html">
+<link rel="import" href="./casual-service/casual-service.html">
+
 
 
