--- a/webapp/src/casual-server-view.html
+++ b/webapp/src/casual-server-view.html
@@ -14,7 +14,7 @@
 		</style>
 
 		<iron-ajax id="ironAjaxCall"
-			url="../assets/reply.json"
+			url="http://casual.laz.se/casual/casual?service=.casual.broker.state"
 			handle-as="json" 
 			method="GET"
 			last-response="{{response}}">
