--- a/webapp/src/casual-instance-view.html
+++ b/webapp/src/casual-instance-view.html
@@ -14,13 +14,13 @@
 		</style>
 
 		<iron-ajax id="ironAjaxCall"
-			url="http://casual.laz.se/casual/casual?service=.casual.broker.state"
-			handle-as="json" 
-			method="GET"
+			handle-as="json"
+			contentType="application/json"
+			method="POST"
 			last-response="{{response}}">
 		</iron-ajax>
 
-		<casual-list listname="Instances" listdata="{{response.serviceReturn.instances}}" listattribute="instancedata">
+		<casual-list listname="Instances" listdata="{{response.serviceReturn.instances.local}}" listattribute="instancedata">
 			<casual-instance></casual-instance>
 		</casual-list>
 
@@ -30,10 +30,22 @@
 		Polymer({
 			is: 'casual-instance-view',
 			properties: {
-			route: Object
+				route: Object,
+				
+				_baseURL: {
+					type: String,
+					value: "service=.casual.broker.state",
+					readOnly: true
+				}
 		},
 
 		attached: function() {
+			fetchGlobalConfiguration(this);
+		},
+
+		doRequest: function() {
+			(this.$.ironAjaxCall).url = global_configuration[global_path].url + "?" + this._baseURL;
+			(this.$.ironAjaxCall).body = "{}";
 			(this.$.ironAjaxCall).generateRequest();
 		}
 		
