--- a/webapp/src/casual-service-view.html
+++ b/webapp/src/casual-service-view.html
@@ -15,8 +15,9 @@
 
 		<iron-ajax id="ironAjaxCall"
 			url="http://casual.laz.se/casual/casual?service=.casual.broker.state"
-			handle-as="json" 
-			method="GET"
+			handle-as="json"
+			contentType="application/json"
+			method="POST"
 			last-response="{{response}}">
 		</iron-ajax>
 
@@ -30,10 +31,22 @@
 		Polymer({
 			is: 'casual-service-view',
 			properties: {
-			route: Object
+				route: Object,
+				
+				_baseURL: {
+					type: String,
+					value: "service=.casual.broker.state",
+					readOnly: true
+				}
 		},
 
 		attached: function() {
+			fetchGlobalConfiguration(this);
+		},
+
+		doRequest: function() {
+			(this.$.ironAjaxCall).url = global_configuration[global_path].url + "?" + this._baseURL;
+			(this.$.ironAjaxCall).body = "{}";
 			(this.$.ironAjaxCall).generateRequest();
 		}
 
