Moved config.json to src/ to be included in polymer build. Removed old url:s in views. issue #73

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 				function fetchGlobalConfiguration(callObject) {
 					if(global_configuration) {
-						var url = "config.json";
+						var url = "src/config.json";
 						var xhr = new XMLHttpRequest();
 						xhr.onreadystatechange = function()
 						{
