--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,10 +16,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 			<title>Casual</title>
 
-			<link rel="shortcut icon" sizes="32x32" href="/images/casual-app-icon-32.png">
+			<link rel="shortcut icon" sizes="32x32" href="./src/images/casual-app-icon-32.png">
 
 			<meta name="theme-color" content="#fff">
-			<link rel="manifest" href="/manifest.json">
+			<link rel="manifest" href="./manifest.json">
 
 			<style is="custom-style">
 
@@ -40,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 				function fetchGlobalConfiguration(callObject) {
 					if(global_configuration) {
-						var url = "src/config.json";
+						var url = "./src/config.json";
 						var xhr = new XMLHttpRequest();
 						xhr.onreadystatechange = function()
 						{
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					} else {
 						// polyfill web components
 						var e = document.createElement('script');
-						e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
+						e.src = './bower_components/webcomponentsjs/webcomponents-lite.min.js';
 						document.head.appendChild(e);
 					}
 				})();
@@ -81,13 +81,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				// load pre-caching service worker
 				if ('serviceWorker' in navigator) {
 					window.addEventListener('load', function() {
-						navigator.serviceWorker.register('/service-worker.js');
+						navigator.serviceWorker.register('./service-worker.js');
 					});
 				}
 
 			</script>
 
-			<link rel="import" href="/src/casual-app.html">
+			<link rel="import" href="./src/casual-app.html">
 
 			<style>
 
