--- a/webapp/src/casual-server-view.html
+++ b/webapp/src/casual-server-view.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="./casual-list/casual-list.html">
-<link rel="import" href="./casual-server/casual-server.html">
+<link rel="import" href="./elements/casual-list.html">
+<link rel="import" href="./elements/casual-server.html">
 
 <dom-module id="casual-server-view">
 
