Done some tweaks and startec on a sortable casual-list.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -27,6 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					--app-primary-color: #263238;
 					--app-secondary-color: black;
 					--app-primary-hover-color: #455A64;
+					--app-primary-hover-font-color: #FFFFFF;
 				}
 
 			</style>
