--- a/webapp/src/casual-group-view.html
+++ b/webapp/src/casual-group-view.html
@@ -20,7 +20,7 @@
 			last-response="{{response}}">
 		</iron-ajax>
 
-		<casual-list listname="Groups" listdata="{{response.serviceReturn.groups}}" listattribute="groupdata">
+		<casual-list listname="Groups" listdata="{{response.serviceReturn.groups}}" listattribute="groupdata" sortable>
 			<casual-group></casual-group>
 		</casual-list>
 
