--- a/webapp/src/casual-instance-view.html
+++ b/webapp/src/casual-instance-view.html
@@ -20,7 +20,7 @@
 			last-response="{{response}}">
 		</iron-ajax>
 
-		<casual-list listname="Instances" listdata="{{response.serviceReturn.instances.local}}" listattribute="instancedata">
+		<casual-list listname="Instances" listdata="{{response.serviceReturn.instances.local}}" listattribute="instancedata" sortable>
 			<casual-instance></casual-instance>
 		</casual-list>
 
