--- a/webapp/src/casual-server-view.html
+++ b/webapp/src/casual-server-view.html
@@ -20,7 +20,7 @@
 			last-response="{{response}}">
 		</iron-ajax>
 
-		<casual-list listname="Servers" listdata="{{response.serviceReturn.executables}}" listattribute="serverdata">
+		<casual-list listname="Servers" listdata="{{response.serviceReturn.executables}}" listattribute="serverdata" sortable>
 			<casual-server></casual-server>
 		</casual-list>
 	</template>
