--- a/webapp/src/casual-service-view.html
+++ b/webapp/src/casual-service-view.html
@@ -20,7 +20,7 @@
 			last-response="{{response}}">
 		</iron-ajax>
 
-		<casual-list listname="Services" listdata="{{response.serviceReturn.services}}" listattribute="servicedata">
+		<casual-list listname="Services" listdata="{{response.serviceReturn.services}}" listattribute="servicedata" sortable>
 			<casual-service></casual-service>
 		</casual-list>
 
