--- a/webapp/src/elements/casual-service.html
+++ b/webapp/src/elements/casual-service.html
@@ -37,11 +37,9 @@
         #service-type{
             width: 30px;
             height: 100%;
-            background-color: #3f51b5; 
-            color: #fff;
-            vertical-align: middle;
             text-align: center;
             line-height: 60px;
+            border-right: 1px solid #d0d0d0;
         }
 
         #service-info-content{
