--- a/webapp/src/casual-app.html
+++ b/webapp/src/casual-app.html
@@ -76,7 +76,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			}
 		</style>
 
-		<app-location route="{{route}}"></app-location>
+		<app-location  use-hash-as-path route="{{route}}"></app-location>
 		<app-route
 			route="{{route}}"
 			pattern="/:page"
@@ -89,10 +89,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		<!-- Drawer content -->
 		<app-drawer>
 			<iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-				<a name="casual-server-view" href="/server" id="server">Servers</a>
-				<a name="casual-group-view" href="/group" id="group">Groups</a>
-				<a name="casual-instance-view" href="/instance" id="instance">Instances</a>
-				<a name="casual-service-view" href="/service" id="service">Services</a>
+				<a name="casual-server-view" href="#/server" id="server">Servers</a>
+				<a name="casual-group-view" href="#/group" id="group">Groups</a>
+				<a name="casual-instance-view" href="#/instance" id="instance">Instances</a>
+				<a name="casual-service-view" href="#/service" id="service">Services</a>
 			</iron-selector>
 		</app-drawer>
 
