WIP abandon named pipes - this commit does not work/compile!

--- a/webapp/src/elements/casual-instance.html
+++ b/webapp/src/elements/casual-instance.html
@@ -70,7 +70,7 @@
             <div class="middle-content">
                 <div class="instance-data">
                     <ul>
-                        <li><span class="queue">Queue: {{instancedata.process.queue}}</span></li>
+                        <li><span class="queue">Queue: {{instancedata.process.ipc}}</span></li>
                     </ul>
                 <div>
             </div>
